# vmware-mcp

./: .gitignore  README.md  pyproject.toml
src/vmware_mcp/: server.py  vmcli.py  vmrun.py
